--- a/Paper.tex
+++ b/Paper.tex
@@ -9,30 +9,26 @@
 \DeclareLanguageMapping{spanish}{spanish-apa}
 \addbibresource{bibliography.bib}
 
-\title{Conectividad cerebral y machine learning. Dos campos de acción, un paradigma en común}
+\title{Inteligencia artificial y psicología. Dos campos de acción, un paradigma en común}
 \shorttitle{Conectividad cerebral y machine learning}
 \author{Juan D. Angarita y Sharol G. Torres}
 \affiliation{Universidad Popular del Cesar}
 \date{2018-08-08}
 
-\leftheader{Angarita y Torres}
-\rightheader{Conectividad cerebral y machine learning}
+\leftheader{Juan David Angarita, Sharol Giseth Torres}
+\rightheader{Inteligencia artificial y conectividad cerebral}
 
+\abstract{En los últimos años, la inteligencia artificial ha desempeñado un papel muy relevante en el intento
+de posibilitar la observación, el análisis y la simulación de vías ejecutivas presentes en procesos cognitivos 
+como la lectura, sin embargo, la integración de esta tecnología en la investigación psicológica sigue siendo
+un paradigma poco explorado en la actualidad. En este trabajo hemos profundizado en una de las posibilidades de integración
+de la inteligencia artificial desarrollando una herramienta que permite sacar un provecho mucho más extenso de
+los datos registrados a través de la electrocorticografía. Además, presentaremos ejemplos de campos de acción
+en el estudio de la conectividad cerebral que pueden ser potencializados a través de la implementación de algoritmos
+de inteligencia artificial y ahondaremos en algunos desafíos que todavía quedan por resolver antes de que 
+esta tecnología sea implementada de forma extendida en el estudio de procesos cognitivos.}
 
-\abstract{¿Desde qué punto se interrelaciona la Neurociencia y la Inteligencia Artificial (IA)? 
-¿Dónde están los límites de esta fusión? Ante estos interrogantes se darán respuesta a lo largo 
-del presente trabajo, realizando para ello un itinerario sobre las teorías neurocientíficas y su 
-influencia en el desarrollo de otras ciencias cognitivas como la I.A. Si bien la neurociencia y 
-la inteligencia artificial se habían considerado como campos independientes en un principio, 
-hoy en día esa delimitación parece obrada de modo artificial y es correspondida con la realidad 
-de la investigación sobre el tema en cuestión.
-En los últimos tiempos, la Inteligencia Artificial (IA) ha cobrado un importante papel en el intento 
-de posibilitar la simulación de las vías ejecutivas (conectividad cerebral) de procesos cognitivos 
-como la lectura; es a través de esta tentativa que se ha puesto 
-en marcha nuestra investigación.
-}
-
-\keywords{machine learning, inteligencia artificial, conectividad cerebral}
+\keywords{inteligencia artificial, conectividad cerebral, electrocorticografía}
 
 
 \begin{document}
