--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,33 +1,66 @@
-@article{Palomino2017,
-    author =       "Sally Palomino",
-    title =        "El profesor colombiano que logró reducir el embarazo adolescente",
-    journal =      "El País",
-    year =         "2017",
-    URL =          "https://elpais.com/internacional/2017/08/04/colombia/1501864960_431787.html"
+@article{Wen2005,
+    author =       "Wen, Q. and Chklovskii, D. B.",
+    title =        "Segregation of the Brain into Gray and White Matter: A Design Minimizing Conduction Delays",
+    journal =      "PLOS Computational Biology",
+    year =         "2005",
+    DOI =          "https://doi.org/10.1371/journal.pcbi.0010078"
 }
 
-@article{Oms2009,
-    author =       "Theresa Braine",
-    title =        "Embarazo en adolescentes: un problema culturalmente complejo",
-    journal =      "Boletín de la Organización Mundial de la Salud",
-    year =         "2009",
-    volume =       "87",
-    pages =        "405 - 484",
-    URL =          "http://www.who.int/bulletin/volumes/87/6/09-020609/es/"
+@article{doi:10.1146/annurev.psych.56.091103.070311,
+    author = {Friston, Karl J.},
+    title = {Models of Brain Function in Neuroimaging},
+    journal = {Annual Review of Psychology},
+    volume = {56},
+    number = {1},
+    pages = {57-87},
+    year = {2005},
+    doi = {10.1146/annurev.psych.56.091103.070311}
 }
 
-@book{Unesco2017,
-    author    = "Unesco",
-    title     = "Embarazo precoz y no planificado y el sector de la educación",
-    year      = "2017",
-    publisher = "Organización de las Naciones Unidas para la Educación la Ciencia y la Cultura",
-    address   = "75352 París 07 SP, Francia"
+@book{Swanson2003,
+    author    = "Larry W. Swanson",
+    title     = "Brain Architecture",
+    year      = "2003",
+    publisher = "Oxford University Press",
+    ISBN      = "978-0195378580"
 }
 
-@book{Steiner1981,
-    author    = "Rudolf Steiner",
-    title     = "Educar a los niños hoy",
-    year      = "1981",
-    publisher = "Rudolf Steiner Press",
-    address   = "Nachlassverwaltung Dornach, Suiza"
+@book{Sporns2010,
+    author    = "Olaf Sporns",
+    title     = "Networks of the Brain",
+    year      = "2010",
+    publisher = "MIT Press"
+}
+
+@book{Jirsa2007,
+    author    = "Viktor K. Jirsa and AR McIntosh",
+    title     = "Handbook of Brain Connectivity",
+    year      = "2007",
+    publisher = "Springer, Berlin, Heidelberg",
+    DOI       = "https://doi.org/10.1007/978-3-540-71512-2"
+}
+
+@article {Tononi5033,
+	author = {Tononi, G and Sporns, O and Edelman, G M},
+	title = {A measure for brain complexity: relating functional segregation and integration in the nervous system},
+	volume = {91},
+	number = {11},
+	pages = {5033--5037},
+	year = {1994},
+	doi = {10.1073/pnas.91.11.5033},
+	publisher = {National Academy of Sciences},
+	issn = {0027-8424},
+	journal = {Proceedings of the National Academy of Sciences}
+}
+
+@article {Massimini2228,
+	author = {Massimini, Marcello and Ferrarelli, Fabio and Huber, Reto and Esser, Steve K. and Singh, Harpreet and Tononi, Giulio},
+	title = {Breakdown of Cortical Effective Connectivity During Sleep},
+	volume = {309},
+	number = {5744},
+	pages = {2228--2232},
+	year = {2005},
+	doi = {10.1126/science.1117256},
+	publisher = {American Association for the Advancement of Science},
+	journal = {Science}
 }
