--- a/Paper.tex
+++ b/Paper.tex
@@ -21,12 +21,13 @@
 \abstract{En los últimos años, la inteligencia artificial ha desempeñado un papel muy relevante en el intento
 de posibilitar la observación, el análisis y la simulación de vías ejecutivas presentes en procesos cognitivos 
 como la lectura, sin embargo, la integración de esta tecnología en la investigación psicológica sigue siendo
-un paradigma poco explorado en la actualidad. En este trabajo hemos profundizado en una de las posibilidades de integración
-de la inteligencia artificial desarrollando una herramienta que permite sacar un provecho mucho más extenso de
-los datos registrados a través de la electrocorticografía. Además, presentaremos ejemplos de campos de acción
-en el estudio de la conectividad cerebral que pueden ser potencializados a través de la implementación de algoritmos
-de inteligencia artificial y ahondaremos en algunos desafíos que todavía quedan por resolver antes de que 
-esta tecnología sea implementada de forma extendida en el estudio de procesos cognitivos.}
+un paradigma poco explorado en la actualidad. En este trabajo se ha profundizado en una de las posibilidades de 
+integración de la inteligencia artificial mediante la creación de una herramienta que permite sintetizar y 
+graficar los datos registrados a través de la electrocorticografía. Además, presentaremos ejemplos de 
+campos de acción en el estudio de la conectividad cerebral que pueden ser potencializados a través de la 
+implementación de algoritmos de inteligencia artificial y ahondaremos en algunos desafíos que todavía quedan 
+por resolver antes de que esta tecnología sea implementada de forma extendida en el estudio de procesos 
+cognitivos.}
 
 \keywords{inteligencia artificial, conectividad cerebral, electrocorticografía}
 
@@ -71,12 +72,14 @@ tiempos para generar espectrogramas y diagramas de coherencia.
 
 \section{Métodos}
 \subsection{Participantes}
-
 \subsection{Materiales}
 \subsection{Diseño}
 \subsection{Procedimiento}
+
 \section{Resultados}
+
 \section{Discusión}
+
 \printbibliography
 
 \end{document}
