--- a/Paper.tex
+++ b/Paper.tex
@@ -79,6 +79,25 @@ tiempos para generar espectrogramas y diagramas de coherencia.
 \section{Resultados}
 
 \section{Discusión}
+La neurociencia es un campo de investigación con un avance vertiginoso y que exige al máximo eficiencia, celeridad
+y automatización para los procesos implicados en la recolección y análisis de datos. Si bien hasta el momento ha 
+sabido aprovechar la tecnología existente, es menester que los últimos avances matemáticos y en materia tecnológica 
+se conviertan en el brazo fuerte que impulse investigaciones como la conectividad funcional del cerebro.
+
+Tecnologías como la inteligencia artificial, machine learning, deep learning y algoritmos de redes neuronales proveen 
+herramientas potentes como nunca antes habíamos visto y que permitirán no sólo acelerar aún más las investigaciones, 
+sino también, garantizar que los resultados sean mucho más confiables, replicables y certeros.
+
+La conectividad funcional del cerebro durante la producción de procesos cognitivos y funciones mentales superiores es 
+un campo de estudio que sólo se puede abordar en humanos. Esto trae como consecuencia ciertas limitaciones a la hora 
+de realizar la investigación, como la falta de pacientes dispuestos a participar en procedimientos clínicos estresantes; 
+por lo tanto, la cantidad y calidad de los datos se ve comprometida. En este contexto, es esencial optimizar las 
+técnicas estadísticas aplicadas para maximizar el potencial de los resultados.
+
+La metodología implementada en la simulación presentada durante este documento fue diseñada específicamente para este 
+tipo de situaciones. Además, el hecho de que los resultados obtenidos pudieron haber sido mejores es razón suficiente 
+para estimar que con un paradigma experimental más estructurado y con más datos, dichos resultados obtenidos de los 
+pacientes analizados podrán ser replicados en más sujetos.
 
 \printbibliography
 
