--- a/Paper.tex
+++ b/Paper.tex
@@ -94,7 +94,7 @@ de realizar la investigación, como la falta de pacientes dispuestos a participa
 por lo tanto, la cantidad y calidad de los datos se ve comprometida. En este contexto, es esencial optimizar las 
 técnicas estadísticas aplicadas para maximizar el potencial de los resultados.
 
-La metodología implementada en la simulación presentada durante este documento fue diseñada específicamente para este 
+La metodología implementada en la simulación que se presentó durante este documento fue diseñada específicamente para este 
 tipo de situaciones. Además, el hecho de que los resultados obtenidos pudieron haber sido mejores es razón suficiente 
 para estimar que con un paradigma experimental más estructurado y con más datos, dichos resultados obtenidos de los 
 pacientes analizados podrán ser replicados en más sujetos.
