--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,66 +1,241 @@
-@article{Wen2005,
-    author =       "Wen, Q. and Chklovskii, D. B.",
-    title =        "Segregation of the Brain into Gray and White Matter: A Design Minimizing Conduction Delays",
-    journal =      "PLOS Computational Biology",
-    year =         "2005",
-    DOI =          "https://doi.org/10.1371/journal.pcbi.0010078"
+@article{Season,
+author = {Tubbs, A and Perlis, M and Chakravorty, S and Basner, M and Killgore, W and Gehrels, J and Alfonso-Miller, P and Grandner, M},
+title = {Seasonal Changes in Nocturnal Suicide Risk},
+journal = {Sleep},
+volume = {41},
+pages = {A366},
+year = {2018}
 }
 
-@article{doi:10.1146/annurev.psych.56.091103.070311,
-    author = {Friston, Karl J.},
-    title = {Models of Brain Function in Neuroimaging},
-    journal = {Annual Review of Psychology},
-    volume = {56},
+@article{Capsules,
+    author    = {Sara Sabour and
+    Nicholas Frosst and
+    Geoffrey E. Hinton},
+    title     = {Dynamic Routing Between Capsules},
+    journal   = {CoRR},
+    volume    = {abs/1710.09829},
+    year      = {2017},
+    timestamp = {Mon, 13 Aug 2018 16:47:11 +0200},
+}
+
+@article{MedicinaLegal,
+    author = {INMLCF},
+    title = {Suicidios según edad},
+    year = {2016},
+    url = {https://www.datos.gov.co/Estad-sticas-Nacionales/Suicidios-seg-n-Edad-/3nc9-zxcb/data}
+}
+
+@article{Facebook,
+    author = {IWS},
+    title = {Internet Usage and Population in South America },
+    year = {2017},
+    url = {https://www.internetworldstats.com/stats15.htm}
+}
+
+@article{TextAnalysis,
+    author = {Curtin Sally and Warner Margaret and Hedegaard Holly}, 
+    title = {Increase in suicide in the United States, 1999–2014},
+    year = 2016,
+    journal = {NCHS data brief},
+    volume = {241}
+}
+
+@article{Carruthers2010,
+    author="Carruthers, Helen R.
+    and Morris, Julie
+    and Tarrier, Nicholas
+    and Whorwell, Peter J.",
+    title="The Manchester Color Wheel: development of a novel way of identifying color choice and its validation in healthy, anxious and depressed individuals",
+    journal="BMC Medical Research Methodology",
+    year="2010",
+    month="Feb",
+    day="09",
+    volume="10",
+    number="1",
+    pages="12",
+    abstract="For the purposes of our research programme we needed a simple, reliable and validated method for allowing choice of a color in response to a series of questions. On reviewing the literature no such instrument was available and this study aimed to rectify this situation. This was achieved by developing a simple method of presenting a series of colors to people validating it in healthy volunteers and in individuals where color choice might be distorted, namely anxiety and depression.",
+    issn="1471-2288",
+    doi="10.1186/1471-2288-10-12",
+    url="https://doi.org/10.1186/1471-2288-10-12"
+}
+
+@article{Twitter,
+    author="Braithwaite, Scott R
+    and Giraud-Carrier, Christophe
+    and West, Josh
+    and Barnes, Michael D
+    and Hanson, Carl Lee",
+    title="Validating Machine Learning Algorithms for Twitter Data Against Established Measures of Suicidality",
+    journal="JMIR Mental Health",
+    year="2016",
+    volume="3",
+    number="2",
+    pages="e21",
+    issn="2368-7959",
+    doi="10.2196/mental.4822"
+}
+
+@article{Convolutional,
+    author    = {Tomas Iesmantas and
+    Robertas Alzbutas},
+    title     = {Convolutional capsule network for classification of breast cancer
+    histology images},
+    journal   = {CoRR},
+    volume    = {abs/1804.08376},
+    year      = {2018},
+    url       = {http://arxiv.org/abs/1804.08376},
+    archivePrefix = {arXiv},
+    biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1804-08376},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{SuicidalB,
+    author = {Ursano, Robert J. and Heeringa, Steven G. and Stein, Murray B. and Jain, Sonia and Raman, Rema and Sun, Xiaoying and Chiu, Wai Tat and Colpe, Lisa J. and Fullerton, Carol S. and Gilman, Stephen E. and Hwang, Irving and Naifeh, James A. and Nock, Matthew K. and Rosellini, Anthony J. and Sampson, Nancy A. and Schoenbaum, Michael and Zaslavsky, Alan M. and Kessler, Ronald C.},
+    title = {PREVALENCE AND CORRELATES OF SUICIDAL BEHAVIOR AMONG NEW SOLDIERS IN THE U.S. ARMY: RESULTS FROM THE ARMY STUDY TO ASSESS RISK AND RESILIENCE IN SERVICEMEMBERS (ARMY STARRS)},
+    journal = {Depression and Anxiety},
+    volume = {32},
     number = {1},
-    pages = {57-87},
-    year = {2005},
-    doi = {10.1146/annurev.psych.56.091103.070311}
+    year = {2015},
+    pages = {3-12},
+    keywords = {military personnel, prevalence, suicide, suicide ideation, suicide attempt},
+    doi = {10.1002/da.22317}
 }
 
-@book{Swanson2003,
-    author    = "Larry W. Swanson",
-    title     = "Brain Architecture",
-    year      = "2003",
-    publisher = "Oxford University Press",
-    ISBN      = "978-0195378580"
+@article {Littlewoode012113,
+    author = {Littlewood, Donna L and Gooding, Patricia and Kyle, Simon D and Pratt, Daniel and Peters, Sarah},
+    title = {Understanding the role of sleep in suicide risk: qualitative interview study},
+    volume = {6},
+    number = {8},
+    year = {2016},
+    doi = {10.1136/bmjopen-2016-012113},
+    publisher = {British Medical Journal Publishing Group},
+    issn = {2044-6055},
+    journal = {BMJ Open}
 }
 
-@book{Sporns2010,
-    author    = "Olaf Sporns",
-    title     = "Networks of the Brain",
-    year      = "2010",
-    publisher = "MIT Press"
+@article{PERLIS2016101,
+    title = "Suicide and sleep: Is it a bad thing to be awake when reason sleeps?",
+    journal = "Sleep Medicine Reviews",
+    volume = "29",
+    pages = "101 - 107",
+    year = "2016",
+    issn = "1087-0792",
+    doi = "https://doi.org/10.1016/j.smrv.2015.10.003",
+    author = "Michael L. Perlis and Michael A. Grandner and Subhajit Chakravorty and Rebecca A. Bernert and Gregory K. Brown and Michael E. Thase",
+    keywords = "Sleep disturbance, Suicide, Circadian patterning, Hypofrontality, Executive function"
 }
 
-@book{Jirsa2007,
-    author    = "Viktor K. Jirsa and AR McIntosh",
-    title     = "Handbook of Brain Connectivity",
-    year      = "2007",
-    publisher = "Springer, Berlin, Heidelberg",
-    DOI       = "https://doi.org/10.1007/978-3-540-71512-2"
+@article{Sleeping,
+    author = {Neel Koyawala and Jack Stevens and Sandra M. McBee-Strayer and Elizabeth A. Cannon and Jeffrey A. Bridge},
+    title = {Sleep Problems and Suicide Attempts Among Adolescents: A Case-Control Study},
+    journal = {Behavioral Sleep Medicine},
+    volume = {13},
+    number = {4},
+    pages = {285-295},
+    year  = {2015},
+    publisher = {Taylor & Francis},
+    doi = {10.1080/15402002.2014.888655},
+    note ={PMID: 24654933}
+    
 }
 
-@article {Tononi5033,
-	author = {Tononi, G and Sporns, O and Edelman, G M},
-	title = {A measure for brain complexity: relating functional segregation and integration in the nervous system},
-	volume = {91},
-	number = {11},
-	pages = {5033--5037},
-	year = {1994},
-	doi = {10.1073/pnas.91.11.5033},
-	publisher = {National Academy of Sciences},
-	issn = {0027-8424},
-	journal = {Proceedings of the National Academy of Sciences}
+@article{Capsules2,
+    author    = {Mart{\'{\i}}n Abadi and
+    Ashish Agarwal and
+    Paul Barham and
+    Eugene Brevdo and
+    Zhifeng Chen and
+    Craig Citro and
+    Gregory S. Corrado and
+    Andy Davis and
+    Jeffrey Dean and
+    Matthieu Devin and
+    Sanjay Ghemawat and
+    Ian J. Goodfellow and
+    Andrew Harp and
+    Geoffrey Irving and
+    Michael Isard and
+    Yangqing Jia and
+    Rafal J{\'{o}}zefowicz and
+    Lukasz Kaiser and
+    Manjunath Kudlur and
+    Josh Levenberg and
+    Dan Man{\'{e}} and
+    Rajat Monga and
+    Sherry Moore and
+    Derek Gordon Murray and
+    Chris Olah and
+    Mike Schuster and
+    Jonathon Shlens and
+    Benoit Steiner and
+    Ilya Sutskever and
+    Kunal Talwar and
+    Paul A. Tucker and
+    Vincent Vanhoucke and
+    Vijay Vasudevan and
+    Fernanda B. Vi{\'{e}}gas and
+    Oriol Vinyals and
+    Pete Warden and
+    Martin Wattenberg and
+    Martin Wicke and
+    Yuan Yu and
+    Xiaoqiang Zheng},
+    title     = {TensorFlow: Large-Scale Machine Learning on Heterogeneous Distributed
+    Systems},
+    journal   = {CoRR},
+    volume    = {abs/1603.04467},
+    year      = {2016},
+    url       = {http://arxiv.org/abs/1603.04467},
+    archivePrefix = {arXiv},
+    eprint    = {1603.04467},
+    timestamp = {Mon, 13 Aug 2018 16:47:09 +0200},
+    biburl    = {https://dblp.org/rec/bib/journals/corr/AbadiABBCCCDDDG16},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article {Massimini2228,
-	author = {Massimini, Marcello and Ferrarelli, Fabio and Huber, Reto and Esser, Steve K. and Singh, Harpreet and Tononi, Giulio},
-	title = {Breakdown of Cortical Effective Connectivity During Sleep},
-	volume = {309},
-	number = {5744},
-	pages = {2228--2232},
-	year = {2005},
-	doi = {10.1126/science.1117256},
-	publisher = {American Association for the Advancement of Science},
-	journal = {Science}
+@article{Capsules3,
+    author    = {Matthew D. Zeiler and
+    Rob Fergus},
+    title     = {Stochastic Pooling for Regularization of Deep Convolutional Neural
+    Networks},
+    journal   = {CoRR},
+    volume    = {abs/1301.3557},
+    year      = {2013},
+    url       = {http://arxiv.org/abs/1301.3557},
+    archivePrefix = {arXiv},
+    eprint    = {1301.3557},
+    timestamp = {Mon, 13 Aug 2018 16:47:49 +0200},
+    biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1301-3557},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Capsules4,
+    author    = {Max Jaderberg and
+    Karen Simonyan and
+    Andrew Zisserman and
+    Koray Kavukcuoglu},
+    title     = {Spatial Transformer Networks},
+    journal   = {CoRR},
+    volume    = {abs/1506.02025},
+    year      = {2015},
+    url       = {http://arxiv.org/abs/1506.02025},
+    archivePrefix = {arXiv},
+    eprint    = {1506.02025},
+    timestamp = {Mon, 13 Aug 2018 16:49:02 +0200},
+    biburl    = {https://dblp.org/rec/bib/journals/corr/JaderbergSZK15},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{SANCHEZ2010,
+    title = {Ideación Suicida en Adolescentes: Un Análisis Psicosocial},
+    journal = {Psychosocial Intervention},
+    author={Sánchez-Sosa, Juan Carlos and Villarreal-González, María Elena and Musitu, Gonzalo and Martínez Ferrer, Belen},
+    ISSN = {1132-0559},
+    language = {es},
+    volume = {19},
+    year = {2010},
+    month = {12},
+    pages = {279 - 287},
+    publisher = {scieloes},
 }
